Fix add tags input dark mode

--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -85,6 +85,7 @@
     background-color: #2f2f2f;
   }
 
+  .mass-action-tags .mass-action-tags-input.mass-action-tags-input,
   .side-nav li:not(.logo) > a:hover,
   .side-nav .collapsible-header:hover,
   .side-nav.fixed .collapsible-header:hover {
